--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -5,6 +5,7 @@
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/activity_vertical_margin"
 android:background="@color/window_bg">
 
 <android.support.design.widget.AppBarLayout
@@ -117,7 +118,7 @@ android:background="@color/window_bg">
                     android:layout_centerInParent="true"
                     android:layout_marginEnd="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:src="@drawable/ic_info_white_24dp" />
+                    app:srcCompat="@drawable/ic_info_white_24dp" />
 
             </RelativeLayout>
 
@@ -172,7 +173,7 @@ android:background="@color/window_bg">
                     android:layout_centerInParent="true"
                     android:layout_marginEnd="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:src="@drawable/ic_info_white_24dp" />
+                    app:srcCompat="@drawable/ic_info_white_24dp" />
             </RelativeLayout>
 
 
@@ -195,6 +196,6 @@ android:background="@color/window_bg">
     app:behavior_overlapTop="30dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_marginLeft="@dimen/expandable_recycler_margin"
-    android:layout_marginRight="@dimen/expandable_recycler_margin"></android.support.v7.widget.RecyclerView>
+    android:layout_marginRight="@dimen/expandable_recycler_margin"/>
 
 </android.support.design.widget.CoordinatorLayout>
