--- a/app/src/main/res/layout/fragment_myteam.xml
+++ b/app/src/main/res/layout/fragment_myteam.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/root"
     android:background="@color/window_bg">
 
 
@@ -61,6 +62,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:id="@+id/team_name"
                         android:layout_marginTop="20dp"
                         android:text="BUILD GRADLE"
                         android:paddingLeft="16dp"
