--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/root"
+    android:id="@+id/fragment_faq_root"
     android:layout_height="match_parent"
     tools:context="com.gdgvitvellore.devfest.Entity.FAQ.Fragments.FAQFragment">
 
