--- a/app/src/main/res/layout/activity_main_drawer_item.xml
+++ b/app/src/main/res/layout/activity_main_drawer_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="10dp"
@@ -17,7 +18,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:padding="15dp"
-            android:src="@drawable/ic_android_black_24dp" />
+            app:srcCompat="@drawable/ic_android_black_24dp" />
     </LinearLayout>
 
 
